--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,2 +1,8 @@
 NODE_ENV = development
 PORT = 5000
+MONGO_URI = mongodb+srv://saikat:saikat1095@cluster0.htwdq.mongodb.net/oldBooks?retryWrites=true&w=majority
+
+
+JWT_SECRET=hashhashsush
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
